<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".order">

    <TextView
        android:id="@+id/ordSum"
        android:text="Will be populated on load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/dateLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ordSum"
        android:layout_alignStart="@+id/ordDate"
        android:textSize="15sp"
        android:text="@string/datePicker"/>

    <DatePicker
        android:id="@+id/ordDate"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:minDate="today"
        android:layout_below="@+id/dateLbl"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ordDate"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:text="@string/submit"
        android:textSize="20sp"
        android:onClick="subBtn" />

    <Button
        android:id="@+id/newOrd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submit"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/newOrd"
        android:textSize="20sp"
        android:onClick="newOrd" />

</RelativeLayout>